Support for dynamic attributes in genericFilter #2343 (#2534)
(cherry picked from commit 3d0b82ee34260bf7a6c6eaa99de69916f002273e)